<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iRss</string>
    
    <!-- Init Activity -->
    <string name="welcome">欢迎使用iRss</string>
    <string name="google_username">Google用户名</string>
    <string name="google_password">Google密码</string>
    <string name="text_gmail">x@gmail.com</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="accout_intro">如果。。。</string>
    <string name="btn_nogoogle">不使用Google</string>
    <string name="btn_sure">确定</string>
    
    <!-- help -->
    <string name="about_file_path">zh-cn/about.txt</string>
	<string name="help_file_path">zh-cn/help.txt</string>
</resources>
