<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical">
		<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_weight="1"
		android:layout_height="0sp" android:orientation="vertical" android:isScrollContainer="true" android:layout_margin="10dip">
			
		

<LinearLayout android:id="@+id/LinearLayout04" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:layout_marginBottom="10dip" android:layout_marginTop="20dip">
				<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dip" android:layout_marginTop="5dip" android:textColor="#fff" android:textSize="20sp" android:text="@string/google_username"></TextView>
				<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:hint="@string/hint_username" android:text="@string/text_gmail" android:singleLine="true"></EditText>
				<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dip" android:layout_marginTop="5dip" android:textColor="#fff" android:textSize="20sp" android:text="@string/google_password"></TextView>
				<EditText android:id="@+id/EditText02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:hint="@string/hint_password" android:password="true" android:singleLine="true"></EditText>
			
</LinearLayout>
<LinearLayout android:layout_height="wrap_content" android:layout_above="@+id/LinearLayout04" android:layout_centerHorizontal="true" android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:orientation="horizontal">
<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_48"></ImageView>
<TextView android:id="@+id/TextView03" android:layout_height="fill_parent" android:layout_width="wrap_content" android:gravity="center_vertical" android:textColor="#fff" android:textSize="25dip" android:layout_marginLeft="5dip" android:text="@string/welcome"></TextView>
</LinearLayout><LinearLayout android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_below="@+id/LinearLayout04" android:id="@+id/LinearLayout05" android:layout_width="fill_parent"><TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:text="@string/accout_intro" android:layout_width="fill_parent"></TextView>
</LinearLayout>



</RelativeLayout>
	<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" style="@android:style/ButtonBar"
		android:layout_width="fill_parent" android:orientation="horizontal" android:background="#999">
		<Button android:id="@+id/Button01" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:gravity="center" android:layout_width="0dip" android:layout_weight="0.5" android:text="@string/btn_nogoogle" android:enabled="false"></Button>
	<ImageView android:id="@+id/ImageView02" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="60dip" android:maxHeight="100dip"></ImageView><Button android:id="@+id/Button02" android:layout_height="wrap_content" android:layout_width="0dip" android:layout_weight="0.5" android:text="@string/btn_sure"></Button>

</LinearLayout>
</LinearLayout>
